atompythonrun.log
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 61, in __init__
    button = buttonClass(name, menuButtonDict[name])
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
FileNotFoundError: No file 'Assets/UI/quit.png' found in working directory 'C:\Users\binns\Desktop\Chess'.
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 61, in __init__
    button = buttonClass(name, menuButtonDict[name])
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
FileNotFoundError: No file 'Assets/UI/quit.png' found in working directory 'C:\Users\binns\Desktop\Chess'.
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 61, in __init__
    button = buttonClass(name, menuButtonDict[name])
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
FileNotFoundError: No file 'Assets/UI/quit.png' found in working directory 'C:\Users\binns\Desktop\Chess'.
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 61, in __init__
    button = buttonClass(name, menuButtonDict[name])
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
FileNotFoundError: No file 'Assets/UI/quit.png' found in working directory 'C:\Users\binns\Desktop\Chess'.
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 61, in __init__
    button = buttonClass(name, menuButtonDict[name])
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
FileNotFoundError: No file 'Assets/UI/quit.png' found in working directory 'C:\Users\binns\Desktop\Chess'.
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 61, in __init__
    button = buttonClass(name, menuButtonDict[name])
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
FileNotFoundError: No file 'Assets/UI/quit.png' found in working directory 'C:\Users\binns\Desktop\Chess'.
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 3, in <module>
    from Code.UI import uiClass
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 63
    self.quitButton =
                     ^
SyntaxError: invalid syntax
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 3, in <module>
    from Code.UI import uiClass
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 63
    self.quitButton =
                     ^
SyntaxError: invalid syntax
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 62, in __init__
    button = buttonClass(quit, (100, 50), 250)
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
TypeError: can only concatenate str (not "Quitter") to str
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 62, in __init__
    button = buttonClass(quit, (100, 50), (250, 250))
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
TypeError: can only concatenate str (not "Quitter") to str
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
Traceback (most recent call last):
  File "C:\Users\binns\Desktop\Chess\main.py", line 7, in <module>
    UI = uiClass()
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 62, in __init__
    button = buttonClass("quit", (100, 50), (250, 250))
  File "C:\Users\binns\Desktop\Chess\Code\UI.py", line 13, in __init__
    self.image = pg.transform.scale(pg.image.load("Assets/UI/" + name + ".png"), (scale, scale))
TypeError: size must be two numbers
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
pygame 2.1.2 (SDL 2.0.18, Python 3.10.5)
Hello from the pygame community. https://www.pygame.org/contribute.html
